# tinympc

./: README.md
tinympc2/: CMakeLists.txt
tinympc2/src/: mpc.cpp
